--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,10 @@
     <title>React App</title>
     <style>
       body{
-          background-image:url(
-          "https://images.pexels.com/photos/399160/pexels-photo-399160.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
-          background-repeat: no-repeat;
-          background-attachment: fixed; 
-          background-size: 100% 100%;
+        background-color: #FFDEE9;
+        background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
+        background-repeat: no-repeat;
+        background-attachment: fixed; 
       }
   </style>
   </head>
